--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 </video>
         <div class="video-header__text">
           <div class="video-header__content-text">
-            <p class="video-header__tittle">Más de 60 años fabricando estilo</p><a class="mybtn" href="">Quiero que me atienda alguien</a>
+            <h2 class="h4 video-header__tittle">Más de 60 años fabricando estilo</h2><a class="mybtn" href="">Quiero que me atienda alguien</a>
           </div>
         </div>
       </div>
@@ -58,11 +58,19 @@
       <section class="section-top section-1">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><picture>
+            <div class="swiper-slide"><picture class="mySlider__picture">
 <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"><img class="mySwiper__img" src="https://images.unsplash.com/photo-1503342296413-28a6ec3768b5?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1974&amp;q=80" alt="alt"/></picture>
+              <div class="mySwiper__text">
+                <h2 class="h2 mySwiper__title">Camisetas Basícas Estampadas</h2>
+                <p class="p">Camisetas 100% algodón con estampados en serigrafia</p><a class="mybtn" href="">Ver más</a>
+              </div>
             </div>
-            <div class="swiper-slide"><picture>
+            <div class="swiper-slide"><picture class="mySlider__picture">
 <source media="(orientation: landscape)" srcset="https://images.unsplash.com/photo-1503341733017-1901578f9f1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"><img class="mySwiper__img" src="https://images.unsplash.com/photo-1502389614483-e475fc34407e?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1974&amp;q=80" alt=""/></picture>
+              <div class="mySwiper__text"> 
+                <h2 class="h2 mySwiper__title">Camisetas Basícas Estampadas</h2>
+                <p class="p">Camisetas 100% algodón con estampados en serigrafia</p><a class="mybtn" href="">Ver más</a>
+              </div>
             </div>
           </div>
           <div class="mySwiper__buttons">
