--- a/public/style-guide.html
+++ b/public/style-guide.html
@@ -31,7 +31,7 @@
               <div class="hamburguer__div-center" id="hamburguer__div-center"></div>
             </div>
           </div>
-          <div class="navbar__links" id="navbar__links"><a class="navbar__link animated-border navbar__link--active " href="#section-top">Inicio</a><a class="navbar__link animated-border " href="#section-galery">Camisetas</a><a class="navbar__link animated-border " href="#section-prices">Tiendas</a><a class="navbar__link animated-border " href="#section-map">WhatsApp</a></div>
+          <div class="navbar__links" id="navbar__links"><a class="navbar__link animated-border navbar__link--active " href="">Inicio</a><a class="navbar__link animated-border " href="">Catalogo</a><a class="navbar__link animated-border " href="">Tiendas</a><a class="navbar__link animated-border " href="">WhatsApp</a></div>
         </div>
       </div>
     </header>
