--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -8,7 +8,7 @@
     <meta name="Extrene" content="Tienda de ropa"/>
     <meta name="author" content="Ceo Alg"/>
     <meta name="robots" content="index, follow"/>
-    <link rel="stylesheet" type="text/css" href="./style-guide.css"/>
+    <link rel="stylesheet" type="text/css" href="./tiendas.css"/>
   </head>
   <body class="body" id="body">
     <header class="header">
@@ -27,61 +27,38 @@
           <div class="navbar__links" id="navbar__links"><a class="navbar__link animated-border" href="/" id="inicio">Inicio</a><a class="navbar__link animated-border" href="/catalogo.html" id="catalogo">Catalogo</a><a class="navbar__link animated-border" href="/tiendas.html" id="tiendas">Tiendas</a></div>
         </div>
       </div>
+      <div class="header__img"><img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80" alt="Tienda de ropa"/></div>
+      <div class="header__text">
+        <h2 class="h4 video-header__tittle">Más de 60 años fabricando estilo</h2><a class="mybtn" href="https://wa.me/+573244117596?text= Quiero que me atienda alguien" target="blank">Quiero que me atienda alguien</a>
+      </div>
     </header>
     <main class="main">
-      <div class="container-lg">
-        <div class="style-guide__sections">
-          <div class="style-guide__sample-texts">
-            <h1 class="h1">Juan Gonzalez Barber</h1>
-            <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste facilis impedit laboriosam sunt consequuntur hic ducimus, mollitia alias repellendus dolores adipisci ullam! Iste ipsum sequi consectetur ipsa quaerat ex corporis.</p>
-            <div class="style-guide__buttons">
-              <div><a class="mybtn mybtn--call">Call</a><a class="mybtn mybtn--outlined">outlined</a></div>
-              <div><a class="mybtn">Boton</a><a class="mybtn mybtn--tonal">Tonal</a></div>
-              <div> <a class="mybtn mybtn--disabled"> Disabled</a><a class="mybtn mybtn--outlined mybtn--disabled"> Disabled</a></div>
-            </div>
-          </div>
-          <div class="style-guide__section-colors">
-            <h2 class="h2">Colores</h2>
-            <div class="style-guide__color-palette">
-              <h3 class="h3">Primary   </h3>
-              <div class="style-guide__colors">
-                <div class="style-guide__color style-guide__color--primary-1"> </div>
-                <div class="style-guide__color style-guide__color--primary-2"> </div>
-                <div class="style-guide__color style-guide__color--primary-3"> </div>
-                <div class="style-guide__color style-guide__color--primary-4"> </div>
-                <div class="style-guide__color style-guide__color--primary-5"> </div>
-                <div class="style-guide__color style-guide__color--primary-6"> </div>
-                <div class="style-guide__color style-guide__color--primary-7"> </div>
-                <div class="style-guide__color style-guide__color--primary-8"> </div>
-                <div class="style-guide__color style-guide__color--primary-9"> </div>
-              </div>
-            </div>
-            <div class="style-guide__color-palette">
-              <h3 class="h3">Secondary </h3>
-              <div class="style-guide__colors">
-                <div class="style-guide__color style-guide__color--secondary-1"> </div>
-                <div class="style-guide__color style-guide__color--secondary-2"> </div>
-                <div class="style-guide__color style-guide__color--secondary-3"> </div>
-                <div class="style-guide__color style-guide__color--secondary-4"> </div>
-                <div class="style-guide__color style-guide__color--secondary-5"> </div>
-                <div class="style-guide__color style-guide__color--secondary-6"> </div>
-                <div class="style-guide__color style-guide__color--secondary-7"> </div>
-                <div class="style-guide__color style-guide__color--secondary-8"> </div>
-                <div class="style-guide__color style-guide__color--secondary-9"> </div>
-              </div>
-            </div>
-          </div>
-          <div class="style-guide__texts"> 
-            <h1 class="h1">Esto es un titulo h1</h1>
-            <h2 class="h2">Esto es un titulo h2</h2>
-            <h3 class="h3">Esto es un titulo h3</h3>
-            <h4 class="h4">Esto es un titulo h4</h4>
-            <p class="p-semibold">Esto es un parrafo semibold</p>
-            <p class="p">Esto es un parrafo semibold</p>
-            <p class="p-small">Esto es un parrafo small</p>
+      <section class="section-1">
+        <h1 class="h1">Somos Tienda Física</h1>
+        <div class="section-1__text">
+          <p class="p">En cada una de nuestras tiendas, encontrarás una amplia selección de productos de alta calidad y un equipo dedicado a brindarte asesoramiento experto. Ven y descubre lo que tenemos para ti en nuestras tres acogedoras ubicaciones en Pereira.</p><a class="mybtn mybtn--outlined" href="https://wa.me/+573244117596?text= Quiero ir a las tiendas" target="blank">Quiero ir a las tiendas</a>
+        </div>
+      </section>
+      <section class="stores">
+        <div class="store">
+          <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <div class="store__text">
+            <p class="store__p">Carrera 8 #15-52</p>
           </div>
         </div>
-      </div>
+        <div class="store">
+          <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <div class="store__text">
+            <p class="store__p">Carrera 8 #15-52</p>
+          </div>
+        </div>
+        <div class="store">
+          <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <div class="store__text">
+            <p class="store__p">Carrera 8 #15-52</p>
+          </div>
+        </div>
+      </section>
       <div class="footer" id="footer">
         <div class="container-footer">
           <div class="footer__logo"><svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 267.34 93.8"><defs><style>.cls-1{fill:red;}.cls-2{fill:#969696;}</style></defs><title>Recurso 5</title><g id="Capa_2" data-name="Capa 2"><g id="Capa_1-2" data-name="Capa 1"><polygon class="cls-1" points="104.89 67.47 76.44 33.77 104.31 0 86.65 0 67.5 23.17 47.94 0 29.82 0 58.51 34.04 9.12 93.8 30.52 89.41 67.46 44.66 86.68 67.47 104.89 67.47"/>
