--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -42,20 +42,23 @@
       <section class="stores">
         <div class="store">
           <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <h4 class="h4">Fashion</h4>
           <div class="store__text">
-            <p class="store__p">Carrera 8 #15-52</p>
+            <p class="store__p p-semibold">Carrera 8 #15-52</p><a class="mybtn mybtn--outlined" href="">WhatsApp de la tienda</a>
           </div>
         </div>
         <div class="store">
           <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <h4 class="h4">Tiendas</h4>
           <div class="store__text">
-            <p class="store__p">Carrera 8 #15-52</p>
+            <p class="store__p p-semibold">Carrera 8 #15-52</p><a class="mybtn mybtn--outlined" href="">WhatsApp de la tienda</a>
           </div>
         </div>
         <div class="store">
           <div class="store__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <h4 class="h4">New</h4>
           <div class="store__text">
-            <p class="store__p">Carrera 8 #15-52</p>
+            <p class="store__p p-semibold">Carrera 8 #15-52</p><a class="mybtn mybtn--outlined" href="">WhatsApp de la tienda</a>
           </div>
         </div>
       </section>
