--- a/public/index.html
+++ b/public/index.html
@@ -81,13 +81,13 @@
         <h2 class="h1 new__h1">Nueva Colección</h2>
         <div class="products">
           <div class="product">
-            <div class="swiper product-slider"><a class="product-slider__slides swiper-wrapper" href="https://wa.me/+573244117596?text= Me interesa https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&amp;width=600" target="blank">
-                <div class="product-slider__slide swiper-slide"><img class="product-slider__img" src="https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&amp;width=600" alt="foto de la prenda"/></div>
+            <div class="swiper product-slider"><a class="product-slider__slides swiper-wrapper" href="https://wa.me/+573244117596?text= Me interesa /img/products/camisetas-basicas/RZ1009-FRENTE.webp" target="blank">
+                <div class="product-slider__slide swiper-slide"><img class="product-slider__img" src="/img/products/camisetas-basicas/RZ1009-FRENTE.webp" alt="foto de la prenda"/></div>
                 <div class="product-slider__slide swiper-slide"><img class="product-slider__img" src="https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&amp;width=600" alt="foto de la prenda"/></div></a>
               <div class="product-slider__btns">
                 <div class="product-slider-btn-next swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg></div>
                 <div class="product-slider-btn-prev swiper-button-prev"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg></div>
-              </div><a class="product__btn mybtn" href="https://wa.me/+573244117596?text= Me interesa https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&amp;width=600" target="blank">Más información</a>
+              </div><a class="product__btn mybtn" href="https://wa.me/+573244117596?text= Me interesa /img/products/camisetas-basicas/RZ1009-FRENTE.webp" target="blank">Más información</a>
             </div>
             <div class="product__text">
               <h4 class="h4 product__title">Camiseta Básica</h4><span>100.000 COP</span>
