se corrije carga del video

--- a/public/style-guide.html
+++ b/public/style-guide.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Extrene</title>
     <script src="scripts-min.js" defer="defer"></script>
-    <meta name="Extrene" content="Tienda de ropa"/>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
+<link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
+    <meta name="Extrene" content="Tienda de ropa"/><meta name="keywords" content="ropa, tienda de ropa, pago contra entrega, Sistecredito, envíos gratis, fabricantes, moda, hombre, mujer">
+<link rel="social" href="https://www.facebook.com/OMOGROUP1980">
     <meta name="author" content="Ceo Alg"/>
     <meta name="robots" content="index, follow"/>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><meta name="description" content="Bienvenido a nuestra tienda de ropa. Encuentra las últimas tendencias en moda para hombres y mujeres. Ofrecemos una amplia selección de prendas de alta calidad.">
     <link rel="stylesheet" type="text/css" href="./style-guide.css"/>
   </head>
   <body class="body" id="body">
