--- a/public/style-guide.html
+++ b/public/style-guide.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Extrene</title>
     <script src="scripts-min.js" defer="defer"></script>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
-<link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
     <meta name="Extrene" content="Tienda de ropa"/><meta name="keywords" content="ropa, tienda de ropa, pago contra entrega, Sistecredito, envíos gratis, fabricantes, moda, hombre, mujer">
 <link rel="social" href="https://www.facebook.com/OMOGROUP1980">
     <meta name="author" content="Ceo Alg"/>
