--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Extrene</title>
     <script src="scripts-min.js" defer="defer"></script>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
-<link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml"/><link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
     <meta name="Extrene" content="Tienda de ropa"/><meta name="keywords" content="ropa, tienda de ropa, pago contra entrega, Sistecredito, envíos gratis, fabricantes, moda, hombre, mujer">
 <link rel="social" href="https://www.facebook.com/OMOGROUP1980">
     <meta name="author" content="Ceo Alg"/>
@@ -31,15 +30,15 @@
           <div class="navbar__links" id="navbar__links"><a class="navbar__link animated-border" href="/" id="inicio">Inicio</a><a class="navbar__link animated-border" href="/tiendas.html" id="tiendas">Tiendas</a></div>
         </div>
       </div>
-      <div class="header__img"><img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80" alt="Tienda de ropa"/></div>
+      <div class="header__img"><img src="img/tiendas.webp" alt="Tienda de ropa"/></div>
       <div class="header__text">
-        <h2 class="h4 video-header__tittle">Más de 60 años fabricando estilo</h2><a class="mybtn" href="https://wa.me/+573244117596?text= Quiero que me atienda alguien" target="blank">Quiero que me atienda alguien</a>
+        <h2 class="h4 video-header__tittle">Más de 60 años fabricando estilo</h2><a class="mybtn mybtn--header" href="https://wa.me/+573244117596?text= Quiero que me atienda alguien" target="blank">Comprar</a>
       </div>
     </header>
     <main class="main">
-      <section class="section-1">
+      <section class="slider-1">
         <h1 class="h1">Somos Tienda Física</h1>
-        <div class="section-1__text">
+        <div class="slider-1__text">
           <p class="p">En cada una de nuestras tiendas, encontrarás una amplia selección de productos de alta calidad y un equipo dedicado a brindarte asesoramiento experto. Ven y descubre lo que tenemos para ti en nuestras tres acogedoras ubicaciones en Pereira.</p><a class="mybtn mybtn--outlined" href="https://wa.me/+573244117596?text= Quiero ir a las tiendas" target="blank">Quiero ir a las tiendas</a>
         </div>
       </section>
